# new_research

./: .gitignore  .gitmodules  README.md  pyproject.toml  train_aoede.py
aoede/: __init__.py  config.py  languages.py  profiles.py  providers.py  schemas.py  service.py
aoede/api/: __init__.py  app.py
aoede/audio/: __init__.py  codec.py  io.py  latent_stats.py  speaker.py
aoede/data/: __init__.py  alignments.py  dataset.py  huggingface.py  manifest.py  sota_distill.py
aoede/eval/: __init__.py  cloneval_benchmark.py  common.py  infer_batch.py  infer_dcrl_lattice.py
aoede/loaders/: __init__.py  from_omnivoice.py
docs/: f5_voice_cloning.md  mnemosvoice_cloneeval_report.md  repo_scope.md  runpod_dual_pods.md  runpod_mnemosvoice_execution.md  sota_hybrid.md
examples/: run_cloneval.sh
patches/: omnivoice-base-commit.txt  omnivoice-local.patch
scripts/: bootstrap_sota_models.sh  run_aoede_clone.py  run_benchmarks_dcrl.sh  run_benchmarks_mosaicflow.sh  run_f5_clone.py  run_sota_clone.py  stage_and_train_mosaicflow.sh  stage_sota_distill.sh  train_aoede_subset.py  train_sota_residualflow.sh
tests/: model_smoke.py  test_api.py  test_atlasflow.py  test_audio_codec.py  test_audio_io.py  test_core.py  test_data_init.py  test_dual_runpod_launcher.py  test_hf_data.py  test_manifest_builder.py  test_mnemosvoice.py  test_mosaicflow.py  test_orchestrate_tokenization.py  test_runpod_launcher.py  test_runpod_pipeline.py  test_sota_hybrid.py  test_torch_runtime.py  test_train_aoede_cli.py  test_training_dataset.py  test_training_filters.py  training_smoke.py
(+64 files in other folders)
