[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aoede"
version = "0.1.0"
description = "Multilingual zero-shot TTS with voice cloning and voice design."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.0",
  "numpy>=1.26.0",
  "pydantic>=2.12.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
audio = [
  "soundfile>=0.13.1",
]
codec = [
  "descript-audio-codec>=1.0.0",
]
training = [
  "datasets>=4.4.1",
  "sentencepiece>=0.2.1",
  "speechbrain>=1.0.3",
  "torch>=2.1.0",
  "torchaudio>=2.1.0",
  "tqdm>=4.66.0",
]
dev = [
  "httpx>=0.28.0",
  "pytest>=6.2.4",
]

[project.scripts]
aoede-api = "aoede.api.app:run"
aoede-prepare-hf = "aoede.data.huggingface:main"
aoede-infer-batch = "aoede.eval.infer_batch:main"
aoede-cloneval = "aoede.eval.cloneval_benchmark:main"
aoede-runpod-dual = "aoede.runpod.dual_pod_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["aoede"]
